--- a/static/extra-credit/extra-credit-02.Rmd
+++ b/static/extra-credit/extra-credit-02.Rmd
@@ -10,29 +10,15 @@ The goal of this task to improve a data visualisation with the objective of tell
 
 ## Task
 
-### Step 1
+1. Step 1: Complete Lab 02 exercises during the workshop.
 
-Complete Lab 02 exercises during the workshop.
+2. Step 2: Export your final visualisation and paste it into this Google Doc [on this Google Doc](https://docs.google.com/document/d/1o3z0VS2ODkymJuwcCMcv1OrDuI188yfu1NcExtRM-AA/edit?usp=sharing). Make sure to enter under University of Edinburgh. Do this before the call on Friday.
 
-### Step 2
+3. Step 3: Update your Zoom profile to include `[UoE]` in the front of your name. To do so you will need to log on to Zoom **prior to** the meeting and update your profile. This will help us make sure we have participants from both schools in each room.
 
-Export your final visualisation and paste it into this Google Doc [on this Google Doc](https://docs.google.com/document/d/1o3z0VS2ODkymJuwcCMcv1OrDuI188yfu1NcExtRM-AA/edit?usp=sharing). Make sure to enter under University of Edinburgh.
+4. Step 4: Join the Zoom call with University of Edinburgh and University of Florida students on Friday, 9 October, 19:00 UK time. Link will be sent out via a Learn announcement.
 
-**Due Date:** Add your questions to the Google Doc by Friday, 9 October, 19:00 UK time.
-
-### Step 3
-
-**Update your Zoom profile** to include `[UoE]` in the front of your name. To do so you will need to log on to Zoom **prior to** the meeting and update your profile. This will help us make sure we have participants from both schools in each room.
-
-### Step 4
-
-**Join the Zoom call** with University of Edinburgh and University of Florida students on Friday, 9 October, 19:00 UK time.
-
-Link will be sent out via a Learn announcement.
-
-### Step 4
-
-Fill out the following form.
+5. Step 5: Fill out the following form.
 
 **Due Date:** Submit your answers by Sunday, 11 October, 17:00 UK time.
 
